cmake_minimum_required(VERSION 3.7)
project(pstream VERSION 1.0.1 LANGUAGES CXX DESCRIPTION "C++ utility for simple IOStream-based Inter-Process Communication")
set(CMAKE_CXX_STANDARD 98)

include(GNUInstallDirs)

set(SOURCE_HEADERS
    ${PROJECT_NAME}/pstream_compat.hpp
    ${PROJECT_NAME}/pstream.hpp
)

add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME} INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

install(TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Targets
    RUNTIME DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
)
install(FILES ${SOURCE_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
